# fantasy-backend

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: main.py  models.py
app/services/: __init__.py  openai_client.py
tests/: dummy responses test  test_advice.py  test_main.py  test_openai_client.py  test_responses_api.py
